# autogen-orchestrator

./: README.md  main.py  pyproject.toml  requirements.dev.txt  requirements.txt
autogen_orchestrator/: hosting.py  main.py  output_format.py  termination.py
autogen_orchestrator/agents/: __init__.py  account_agent.py  customer_agent.py  investment_agent.py  saving_account_agent.py
autogen_orchestrator/models/: generation_result.py
autogen_orchestrator/orchestrators/: round_robin_orchestrator.py  selector_orchestrator.py  swarm_orchestrator.py
autogen_orchestrator/protocols/: i_orchestrator.py
autogen_orchestrator/services/: azure_openai_service.py
autogen_orchestrator/tools/: tools.py
tests/autogen_orchestrator/models/: test_generation_result.py
tests/autogen_orchestrator/services/: test_azure_openai_service.py
